# opengl-game

./: .gitignore  CMakeLists.txt  install.sh  play.bat  play.sh  readme.md
apps/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/external_libs/: CMakeLists.txt
libs/external_libs/glad/: CMakeLists.txt  glad.c
libs/external_libs/glad/include/glad/: glad.h
libs/external_libs/stb_image/: CMakeLists.txt
libs/internal_libs/: CMakeLists.txt
libs/internal_libs/game/: CMakeLists.txt
libs/internal_libs/game/include/: camera.h  game.h
libs/internal_libs/game/src/: camera.cpp  game.cpp
libs/internal_libs/game_obj/: CMakeLists.txt
libs/internal_libs/game_obj/include/: board.h  board_3d.h
libs/internal_libs/game_obj/src/: board.cpp  board_3d.cpp
libs/internal_libs/mylib/: CMakeLists.txt
libs/internal_libs/mylib/include/: A.h
libs/internal_libs/mylib/src/: A.cpp
libs/internal_libs/mylib/test/: CMakeLists.txt  TestA.cpp
libs/internal_libs/opengl/: CMakeLists.txt
libs/internal_libs/opengl/core/: CMakeLists.txt
libs/internal_libs/opengl/core/include/: log.h  shaders.h  texture_atlas.h  textures.h  window.h
libs/internal_libs/opengl/core/src/: shaders.cpp  texture_atlas.cpp  textures.cpp  window.cpp
libs/internal_libs/opengl/game/: CMakeLists.txt
libs/internal_libs/opengl/game/include/: game.h
libs/internal_libs/opengl/game/include/managers/: collision_manager.h  game_state_manager.h  hud_manager.h
libs/internal_libs/opengl/game/include/objects/: ball.h  board_3d.h  brick.h
libs/internal_libs/opengl/game/src/: board_3d.cpp  game.cpp
libs/internal_libs/opengl/game/src/managers/: collision_manager.cpp  game_state_manager.cpp  hud_manager.cpp
libs/internal_libs/opengl/game/src/objects/: ball.cpp  board_3d.cpp  brick.cpp
libs/internal_libs/opengl/geometry/: CMakeLists.txt
libs/internal_libs/opengl/geometry/include/: cuboid.h  cylinder.h  plane.h  rectangle.h  shape.h  sphere.h
libs/internal_libs/opengl/geometry/src/: cuboid.cpp  cylinder.cpp  plane.cpp  rectangle.cpp  shape.cpp  sphere.cpp
libs/internal_libs/opengl/graphics/: CMakeLists.txt
libs/internal_libs/opengl/graphics/include/: camera.h
libs/internal_libs/opengl/graphics/src/: camera.cpp
libs/internal_libs/shaders/: CMakeLists.txt
libs/internal_libs/shaders/include/: shaders.h
libs/internal_libs/shaders/src/: shaders.cpp
libs/internal_libs/shaders/test/: CMakeLists.txt  shadersTest.cpp
libs/internal_libs/shape/: CMakeLists.txt
libs/internal_libs/shape/include/: cuboid.h  rectangle.h  shape.h
libs/internal_libs/shape/src/: cuboid.cpp  rectangle.cpp  shape.cpp
libs/internal_libs/window/: CMakeLists.txt
libs/internal_libs/window/include/: render.h  textures.h  window.h
libs/internal_libs/window/src/: render.cpp  textures.cpp  window.cpp
libs/internal_libs/window/test/: CMakeLists.txt
shaders/: basic.frag  basic.vert
textures/: atlas.json
